// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserSettingsPermissionsPage empty state 1`] = `
<DocumentFragment>
  <h2>
    Unexpected Application Error!
  </h2>
  <h3
    style="font-style: italic;"
  >
    Cannot read properties of undefined (reading 'telemetryRecorder')
  </h3>
  <pre
    style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
  >
    TypeError: Cannot read properties of undefined (reading 'telemetryRecorder')
    at telemetryRecorder (/Users/nathandowns/PycharmProjects/sourcegraph/client/web/src/enterprise/user/settings/auth/UserSettingsPermissionsPage.tsx:58:24)
    at renderWithHooks (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:16175:18)
    at mountIndeterminateComponent (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:20913:13)
    at beginWork (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:22416:16)
    at beginWork$1 (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:27381:14)
    at performUnitOfWork (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:26516:12)
    at workLoopSync (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:26422:5)
    at renderRootSync (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:26390:7)
    at recoverFromConcurrentError (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:25806:20)
    at performConcurrentWorkOnRoot (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:25706:22)
    at flushActQueue (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react@18.1.0/node_modules/react/cjs/react.development.js:2665:24)
    at act (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react@18.1.0/node_modules/react/cjs/react.development.js:2580:11)
    at /Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/@testing-library+react@13.4.0_react-dom@18.1.0_react@18.1.0/node_modules/@testing-library/react/dist/act-compat.js:63:25
    at renderRoot (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/@testing-library+react@13.4.0_react-dom@18.1.0_react@18.1.0/node_modules/@testing-library/react/dist/pure.js:159:26)
    at render (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/@testing-library+react@13.4.0_react-dom@18.1.0_react@18.1.0/node_modules/@testing-library/react/dist/pure.js:246:10)
    at renderWithBrandedContext (/Users/nathandowns/PycharmProjects/sourcegraph/client/wildcard/src/testing/render-with-branded-context.tsx:86:18)
    at Object.&lt;anonymous&gt; (/Users/nathandowns/PycharmProjects/sourcegraph/client/web/src/enterprise/user/settings/auth/UserSettingsPermissionsPage.test.tsx:45:51)
    at Promise.then.completed (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/utils.js:333:28)
    at new Promise (&lt;anonymous&gt;)
    at callAsyncCircusFn (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/utils.js:259:10)
    at _callCircusTest (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/run.js:277:40)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at _runTest (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/run.js:209:3)
    at _runTestsForDescribeBlock (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/run.js:97:9)
    at _runTestsForDescribeBlock (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/run.js:91:9)
    at run (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/run.js:31:3)
    at runAndTransformResultsToJestFormat (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:135:21)
    at jestAdapter (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:92:19)
    at runTestInternal (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-runner@28.1.3/node_modules/jest-runner/build/runTest.js:411:16)
    at runTest (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-runner@28.1.3/node_modules/jest-runner/build/runTest.js:499:34)
    at Object.worker (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-runner@28.1.3/node_modules/jest-runner/build/testWorker.js:133:12)
  </pre>
  <p>
    💿 Hey developer 👋
  </p>
  <p>
    You can provide a way better UX than this when your app throws errors by providing your own 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      errorElement
    </code>
     props on 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      &lt;Route&gt;
    </code>
  </p>
</DocumentFragment>
`;

exports[`UserSettingsPermissionsPage user alice with permissions 1`] = `
<DocumentFragment>
  <h2>
    Unexpected Application Error!
  </h2>
  <h3
    style="font-style: italic;"
  >
    Cannot read properties of undefined (reading 'telemetryRecorder')
  </h3>
  <pre
    style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
  >
    TypeError: Cannot read properties of undefined (reading 'telemetryRecorder')
    at telemetryRecorder (/Users/nathandowns/PycharmProjects/sourcegraph/client/web/src/enterprise/user/settings/auth/UserSettingsPermissionsPage.tsx:58:24)
    at renderWithHooks (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:16175:18)
    at mountIndeterminateComponent (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:20913:13)
    at beginWork (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:22416:16)
    at beginWork$1 (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:27381:14)
    at performUnitOfWork (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:26516:12)
    at workLoopSync (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:26422:5)
    at renderRootSync (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:26390:7)
    at recoverFromConcurrentError (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:25806:20)
    at performConcurrentWorkOnRoot (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react-dom@18.1.0_react@18.1.0/node_modules/react-dom/cjs/react-dom.development.js:25706:22)
    at flushActQueue (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react@18.1.0/node_modules/react/cjs/react.development.js:2665:24)
    at act (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/react@18.1.0/node_modules/react/cjs/react.development.js:2580:11)
    at /Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/@testing-library+react@13.4.0_react-dom@18.1.0_react@18.1.0/node_modules/@testing-library/react/dist/act-compat.js:63:25
    at renderRoot (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/@testing-library+react@13.4.0_react-dom@18.1.0_react@18.1.0/node_modules/@testing-library/react/dist/pure.js:159:26)
    at render (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/@testing-library+react@13.4.0_react-dom@18.1.0_react@18.1.0/node_modules/@testing-library/react/dist/pure.js:246:10)
    at renderWithBrandedContext (/Users/nathandowns/PycharmProjects/sourcegraph/client/wildcard/src/testing/render-with-branded-context.tsx:86:18)
    at Object.&lt;anonymous&gt; (/Users/nathandowns/PycharmProjects/sourcegraph/client/web/src/enterprise/user/settings/auth/UserSettingsPermissionsPage.test.tsx:97:51)
    at Promise.then.completed (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/utils.js:333:28)
    at new Promise (&lt;anonymous&gt;)
    at callAsyncCircusFn (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/utils.js:259:10)
    at _callCircusTest (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/run.js:277:40)
    at _runTest (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/run.js:209:3)
    at _runTestsForDescribeBlock (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/run.js:97:9)
    at _runTestsForDescribeBlock (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/run.js:91:9)
    at run (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/run.js:31:3)
    at runAndTransformResultsToJestFormat (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:135:21)
    at jestAdapter (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-circus@28.1.3/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:92:19)
    at runTestInternal (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-runner@28.1.3/node_modules/jest-runner/build/runTest.js:411:16)
    at runTest (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-runner@28.1.3/node_modules/jest-runner/build/runTest.js:499:34)
    at Object.worker (/Users/nathandowns/PycharmProjects/sourcegraph/node_modules/.pnpm/jest-runner@28.1.3/node_modules/jest-runner/build/testWorker.js:133:12)
  </pre>
  <p>
    💿 Hey developer 👋
  </p>
  <p>
    You can provide a way better UX than this when your app throws errors by providing your own 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      errorElement
    </code>
     props on 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      &lt;Route&gt;
    </code>
  </p>
</DocumentFragment>
`;
